devices/MRE_Controller_Data_Package/WIN64/MT_API.h

#define MT_API extern "C" __declspec( dllexport )
#define MT_API __declspec( dllexport )
//**************************************************//
// V4.3 updated 2020-04-24
//**************************************************//
//==================================================
//运行环境
//===================================================
//dll版本
//初始化窗口
MT_API int32_t __stdcall MT_Init(void);
//关闭窗口
MT_API int32_t __stdcall MT_DeInit(void);
//获取dll版本号
MT_API int32_t __stdcall MT_Get_Dll_Version(char** sVer);
//设置线程锁时间
MT_API int32_t __stdcall MT_Set_Thread_Timeout(uint32_t ms);
//======================================================
//通信口
//======================================================
//打开 UART
MT_API int32_t __stdcall MT_Open_UART(char* sCOM);
MT_API int32_t __stdcall MT_Open_UART_Unicode(TCHAR* sCOM);
MT_API int32_t __stdcall MT_M_Open_UART(int32_t ADev,char* sCOM);
MT_API int32_t __stdcall MT_M_Open_UART_Unicode(int32_t ADev,TCHAR* sCOM);
MT_API int32_t __stdcall MT_Open_UART_ID(int32_t AID);
//关闭 UART
MT_API int32_t __stdcall MT_Close_UART(void);
MT_API int32_t __stdcall MT_M_Close_UART(int32_t ADev);
//打开USB,按系统顺序
MT_API int32_t __stdcall MT_Open_USB(void);
MT_API int32_t __stdcall MT_M_Open_USB(int32_t ADev);
//打开USB，按序列号指定
MT_API int32_t __stdcall MT_M_Open_USB_SN(int32_t ADev,TCHAR* ASN);
//关闭USB
MT_API int32_t __stdcall MT_Close_USB(void);
MT_API int32_t __stdcall MT_M_Close_USB(int32_t ADev);
//打开网口
MT_API int32_t __stdcall MT_Open_Net(uint8_t IP0,uint8_t IP1,uint8_t IP2,uint8_t IP3,uint16_t IPPort);
MT_API int32_t __stdcall MT_M_Open_Net(int32_t ADev,uint8_t IP0,uint8_t IP1,uint8_t IP2,uint8_t IP3,uint16_t IPPort);
//2021 04 20 字符串输入IP或者主机名
MT_API int32_t __stdcall MT_Open_Net_Name(char* IP_or_Name,uint16_t IPPort);
MT_API int32_t __stdcall MT_M_Open_Net_Name(int32_t ADev,char* IP_or_Name,uint16_t IPPort);
//关闭网口
MT_API int32_t __stdcall MT_Close_Net(void);
MT_API int32_t __stdcall MT_M_Close_Net(int32_t ADev);
//=====================================================
//板卡检测
//=====================================================
//检测设备
MT_API int32_t __stdcall MT_Check(void);
MT_API int32_t __stdcall MT_M_Check(int32_t ADev);
//读取资源模块
MT_API int32_t __stdcall MT_Get_Product_Resource(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Product_Resource(int32_t ADev,int32_t* pValue);
//获取ID
MT_API int32_t __stdcall MT_Get_Product_ID(char* sID);
MT_API int32_t __stdcall MT_M_Get_Product_ID(int32_t ADev,char* sID);
//获取SN
MT_API int32_t __stdcall MT_Get_Product_SN(char* sSN);
MT_API int32_t __stdcall MT_M_Get_Product_SN(int32_t ADev,char* sSN);
//获取SN2
MT_API int32_t __stdcall MT_Get_Product_SN2(uint8_t* sSN);
MT_API int32_t __stdcall MT_M_Get_Product_SN2(int32_t ADev,uint8_t* sSN);
//获取SN3
MT_API int32_t __stdcall MT_Get_Product_SN3(char* sSN);
MT_API int32_t __stdcall MT_M_Get_Product_SN3(int32_t ADev,char* sSN);
//读取固件版本号
MT_API int32_t __stdcall MT_Get_Product_Version(int32_t* pMajor,int32_t* pMinor);
MT_API int32_t __stdcall MT_M_Get_Product_Version(int32_t ADev,int32_t* pMajor,int32_t* pMinor);
//读取固件版本号
MT_API int32_t __stdcall MT_Get_Product_Version2(int32_t* pMajor,int32_t* pMinor,int32_t* pRelease,int32_t* pBuild);
MT_API int32_t __stdcall MT_M_Get_Product_Version2(int32_t ADev,int32_t* pMajor,int32_t* pMinor,int32_t* pRelease,int32_t* pBuild);
//===================================================================
//电机相关
//====================================================================
//轴数
MT_API int32_t __stdcall MT_Get_Axis_Num(int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Num(int32_t ADev,int32_t* pValue);
//读取加速度
MT_API int32_t __stdcall MT_Get_Axis_Acc(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Acc(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置加速度
MT_API int32_t __stdcall MT_Set_Axis_Acc(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Acc(int32_t ADev,uint16_t AObj,int32_t Value);
//读取加速度
MT_API int32_t __stdcall MT_Get_Axis_Dec(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Dec(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置加速度
MT_API int32_t __stdcall MT_Set_Axis_Dec(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Dec(int32_t ADev,uint16_t AObj,int32_t Value);
//读取工作模式
MT_API int32_t __stdcall MT_Get_Axis_Mode(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Mode(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置速度模式
MT_API int32_t __stdcall MT_Set_Axis_Mode_Velocity(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Velocity(int32_t ADev,uint16_t AObj);
//设置位置模式
MT_API int32_t __stdcall MT_Set_Axis_Mode_Position(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Position(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Position_Open(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Position_Open(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Mode_Position_Close(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Mode_Position_Close(int32_t ADev,uint16_t AObj);
//读取速度模式目标速度
MT_API int32_t __stdcall MT_Get_Axis_Velocity_V_Target(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Velocity_V_Target(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置速度模式目标速度
MT_API int32_t __stdcall MT_Set_Axis_Velocity_V_Target_Abs(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_V_Target_Abs(int32_t ADev,uint16_t AObj,int32_t Value);
//设置速度模式目标速度
MT_API int32_t __stdcall MT_Set_Axis_Velocity_V_Target_Rel(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_V_Target_Rel(int32_t ADev,uint16_t AObj,int32_t Value);
//停止速度模式
MT_API int32_t __stdcall MT_Set_Axis_Velocity_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Velocity_Stop(int32_t ADev,uint16_t AObj);
//读取位置模式最大速度
MT_API int32_t __stdcall MT_Get_Axis_Position_V_Max(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_V_Max(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置位置模式最大速度
MT_API int32_t __stdcall MT_Set_Axis_Position_V_Max(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_V_Max(int32_t ADev,uint16_t AObj,int32_t Value);
//读取位置模式目标
MT_API int32_t __stdcall MT_Get_Axis_Position_P_Target(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Position_P_Target(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置位置模式目标
MT_API int32_t __stdcall MT_Set_Axis_Position_P_Target_Abs(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_P_Target_Abs(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Position_P_Target_Rel(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_P_Target_Rel(int32_t ADev,uint16_t AObj,int32_t Value);
//停止位置模式
MT_API int32_t __stdcall MT_Set_Axis_Position_Stop(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Stop(int32_t ADev,uint16_t AObj);
//设置编码器比例,用在减速判断上
MT_API int32_t __stdcall MT_Set_Axis_Position_Close_Dec_Factor(uint16_t AObj,float AFactor);
MT_API int32_t __stdcall MT_M_Set_Axis_Position_Close_Dec_Factor(int32_t ADev,uint16_t AObj,float AFactor);
//紧急停止
MT_API int32_t __stdcall MT_Set_Axis_Halt(uint16_t AObj);
MT_API int32_t __stdcall MT_M_Set_Axis_Halt(int32_t ADev,uint16_t AObj);
MT_API int32_t __stdcall MT_Set_Axis_Halt_All(void);
MT_API int32_t __stdcall MT_M_Set_Axis_Halt_All(int32_t ADev);
//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
MT_API int32_t __stdcall MT_Get_Axis_V_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_V_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
//读取当前软件位置
MT_API int32_t __stdcall MT_Get_Axis_P_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_P_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Software_P_Now(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Software_P_Now(int32_t ADev,uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_Get_Axis_Software_P(uint16_t AObj,int32_t* pValue);
MT_API int32_t __stdcall MT_M_Get_Axis_Software_P(int32_t ADev,uint16_t AObj,int32_t* pValue);
//设置软件位置
MT_API int32_t __stdcall MT_Set_Axis_P_Now(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_P_Now(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Software_P(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_P(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Set_Axis_Software_P_Now(uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_M_Set_Axis_Software_P_Now(int32_t ADev,uint16_t AObj,int32_t Value);
MT_API int32_t __stdcall MT_Get_Axis_Status(uint16_t AObj,uint8_t* pRun,uint8_t* pDir,uint8_t* pNeg,uint8_t* pPos,uint8_t* pZero,uint8_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status(int32_t ADev,uint16_t AObj,uint8_t* pRun,uint8_t* pDir,uint8_t* pNeg,uint8_t* pPos,uint8_t* pZero,uint8_t* pMode);
MT_API int32_t __stdcall MT_Get_Axis_Status2(uint16_t AObj,int32_t* pRun,int32_t* pDir,int32_t* pNeg,int32_t* pPos,int32_t* pZero,int32_t* pMode);
MT_API int32_t __stdcall MT_M_Get_Axis_Status2(int32_t ADev,uint16_t AObj,int32_t* pRun,int32_t* pDir,int32_t* pNeg,int32_t* pPos,int32_t* pZero,int32_t* pMode);
MT_API int32_t __stdcall MT_Get_Axis_Status_Run(uint16_t AObj,int32_t* pRun);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Run(int32_t ADev,uint16_t AObj,int32_t* pRun);
MT_API int32_t __stdcall MT_Get_Axis_Status_Dir(uint16_t AObj,int32_t* pDir);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Dir(int32_t ADev,uint16_t AObj,int32_t* pDir);
MT_API int32_t __stdcall MT_Get_Axis_Status_Neg(uint16_t AObj,int32_t* pNeg);
MT_API int32_t __stdcall MT_M_Get_Axis_Status_Neg(int32_t ADev,uint16_t AObj,int32_t* pNeg);