devices/MRE_Controller_Data_Package/WIN64/MT_API.pas

unit MT_API;
//**************************************************//
// V4.3 updated 2020-04-24
//**************************************************//
interface
//==================================================
//运行环境
//===================================================
//dll版本
//初始化窗口
function MT_Init():Integer;stdcall;external 'MT_API.dll'
//关闭窗口
function MT_DeInit():Integer;stdcall;external 'MT_API.dll'
//获取dll版本号
function MT_Get_Dll_Version(sVer:PPChar):Integer;stdcall;external 'MT_API.dll'
//设置线程锁时间
function MT_Set_Thread_Timeout(ms:Cardinal):Integer;stdcall;external 'MT_API.dll'
//======================================================
//通信口
//======================================================
//打开 UART

function MT_Open_UART(sCOM:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_Open_UART_Unicode(sCOM:PChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_UART(ADev:Integer;sCOM:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_UART_Unicode(ADev:Integer;sCOM:PChar):Integer;stdcall;external 'MT_API.dll'
function MT_Open_UART_ID(AID:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_UART_ID(ADev:Integer;AID:Integer):Integer;stdcall;external 'MT_API.dll'


//关闭 UART
function MT_Close_UART():Integer;stdcall;external 'MT_API.dll'


function MT_M_Close_UART(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//打开USB,按系统顺序
function MT_Open_USB():Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_USB(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//打开USB，按序列号指定
function MT_Open_USB_SN(ASN:PChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_USB_SN(ADev:Integer;ASN:PChar):Integer;stdcall;external 'MT_API.dll'
//关闭USB
function MT_Close_USB():Integer;stdcall;external 'MT_API.dll'
function MT_M_Close_USB(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//打开网口
function MT_Open_Net(IP0,IP1,IP2,IP3:Byte;IPPort:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_Net(ADev:Integer;IP0,IP1,IP2,IP3:Byte;IPPort:Word):Integer;stdcall;external 'MT_API.dll'
//2021 04 20 字符串输入IP或者主机名
function MT_Open_Net_Name(IP_or_Name:PAnsiChar;IPPort:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Open_Net_Name(ADev:Integer;IP_or_Name:PAnsiChar;IPPort:Word):Integer;stdcall;external 'MT_API.dll'

//关闭网口
function MT_Close_Net():Integer;stdcall;external 'MT_API.dll'
function MT_M_Close_Net(ADev:Integer):Integer;stdcall;external 'MT_API.dll'

//=====================================================
//板卡检测
//=====================================================
//检测设备
function MT_Check():Integer;stdcall;external 'MT_API.dll'
function MT_M_Check(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//读取资源模块
function MT_Get_Product_Resource(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_Resource(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//获取ID
function MT_Get_Product_ID(sID:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_ID(ADev:Integer;sID:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//获取SN
function MT_Get_Product_SN(sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_SN(ADev:Integer;sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//获取SN2
function MT_Get_Product_SN2(sSN:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_SN2(ADev:Integer;sSN:PByte):Integer;stdcall;external 'MT_API.dll'
//获取SN3
function MT_Get_Product_SN3(sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_SN3(ADev:Integer;sSN:PAnsiChar):Integer;stdcall;external 'MT_API.dll'
//读取固件版本号
function MT_Get_Product_Version(pMajor:PInteger;pMinor:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_Version(ADev:Integer;pMajor:PInteger;pMinor:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取固件版本号
function MT_Get_Product_Version2(pMajor:PInteger;pMinor:PInteger;pRelease:PInteger;pBuild:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Product_Version2(ADev:Integer;pMajor:PInteger;pMinor:PInteger;pRelease:PInteger;pBuild:PInteger):Integer;stdcall;external 'MT_API.dll'
//===================================================================
//电机相关
//====================================================================
//轴数
function MT_Get_Axis_Num(pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Num(ADev:Integer;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Acc(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Acc(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Acc(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Acc(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取加速度
function MT_Get_Axis_Dec(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Dec(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置加速度
function MT_Set_Axis_Dec(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Dec(ADev:Integer; AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取工作模式
function MT_Get_Axis_Mode(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Mode(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式
function MT_Set_Axis_Mode_Velocity(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Velocity(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//设置位置模式
function MT_Set_Axis_Mode_Position(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Position(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Position_Open(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Position_Open(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Mode_Position_Close(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Mode_Position_Close(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//读取速度模式目标速度
function MT_Get_Axis_Velocity_V_Target(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Velocity_V_Target(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Abs(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_V_Target_Abs(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//设置速度模式目标速度
function MT_Set_Axis_Velocity_V_Target_Rel(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_V_Target_Rel(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//停止速度模式
function MT_Set_Axis_Velocity_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Velocity_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'
//读取位置模式最大速度
function MT_Get_Axis_Position_V_Max(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Position_V_Max(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式最大速度
function MT_Set_Axis_Position_V_Max(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_V_Max(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
//读取位置模式目标
function MT_Get_Axis_Position_P_Target(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Position_P_Target(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置位置模式目标
function MT_Set_Axis_Position_P_Target_Abs(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_P_Target_Abs(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Position_P_Target_Rel(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_P_Target_Rel(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

//停止位置模式
function MT_Set_Axis_Position_Stop(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_Stop(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

//设置编码器比例,用在减速判断上
function MT_Set_Axis_Position_Close_Dec_Factor(AObj:Word;AFactor:Single):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Position_Close_Dec_Factor(ADev:Integer;AObj:Word;AFactor:Single):Integer;stdcall;external 'MT_API.dll'

//紧急停止
function MT_Set_Axis_Halt(AObj:Word):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Halt(ADev:Integer;AObj:Word):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Halt_All():Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Halt_All(ADev:Integer):Integer;stdcall;external 'MT_API.dll'
//////////////////////////////////////////////////////////////
///  状态相关
///  //////////////////////////////////////////////////////
//读取当前速度
function MT_Get_Axis_V_Now(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_V_Now(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'

//读取当前软件位置
function MT_Get_Axis_P_Now(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_P_Now(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Software_P_Now(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Software_P_Now(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_Get_Axis_Software_P(AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Software_P(ADev:Integer;AObj:Word;pValue:PInteger):Integer;stdcall;external 'MT_API.dll'
//设置软件位置
function MT_Set_Axis_P_Now(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_P_Now(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Software_P(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_P(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Set_Axis_Software_P_Now(AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'
function MT_M_Set_Axis_Software_P_Now(ADev:Integer;AObj:Word;Value:Integer):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status(AObj:Word;pRun:PByte;pDir:PByte;pNeg:PByte;pPos:PByte;pZero:PByte;pMode:PByte):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status(ADev:Integer;AObj:Word;pRun:PByte;pDir:PByte;pNeg:PByte;pPos:PByte;pZero:PByte;pMode:PByte):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status2(AObj:Word;pRun:PInteger;pDir:PInteger;pNeg:PInteger;pPos:PInteger;pZero:PInteger;pMode:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status2(ADev:Integer;AObj:Word;pRun:PInteger;pDir:PInteger;pNeg:PInteger;pPos:PInteger;pZero:PInteger;pMode:PInteger):Integer;stdcall;external 'MT_API.dll'


function MT_Get_Axis_Status_Run(AObj:Word;pRun:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Run(ADev:Integer;AObj:Word;pRun:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status_Dir(AObj:Word;pDir:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Dir(ADev:Integer;AObj:Word;pDir:PInteger):Integer;stdcall;external 'MT_API.dll'

function MT_Get_Axis_Status_Neg(AObj:Word;pNeg:PInteger):Integer;stdcall;external 'MT_API.dll'
function MT_M_Get_Axis_Status_Neg(ADev:Integer;AObj:Word;pNeg:PInteger):Integer;stdcall;external 'MT_API.dll'
